syntax = "proto3";

package grpc;

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool success = 1;
  string message = 2;
  string role = 3;
  string userId = 4;
}